tests/e2e/null_list_any3.story
# a = null
b = [] to List[any]
a = 1 to any
c = b[a]
